--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -11,6 +11,8 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="android.app.lib_name" android:value="Project14"/>
             <meta-data android:name="android.app.arguments" android:value=""/>
