--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,36 +1,13 @@
 <?xml version="1.0"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.shtrih_m.project14"
-    android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ru.shtrih_m.project14" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true"/>
-    <application
-        android:name="org.qtproject.qt.android.bindings.QtApplication"
-        android:hardwareAccelerated="true"
-        android:label="Project14"
-        android:requestLegacyExternalStorage="true"
-        android:allowNativeHeapPointerTagging="false"
-        android:allowBackup="true"
-        android:fullBackupOnly="false">
-        <activity
-            android:name="org.qtproject.qt.android.bindings.QtActivity"
-            android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density"
-            android:label="Project14"
-            android:launchMode="singleTop"
-            android:screenOrientation="landscape"
-            android:exported="true"
-            android:windowSoftInputMode="stateHidden">
+    <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true"/>
+    <application android:name="org.qtproject.qt.android.bindings.QtApplication" android:hardwareAccelerated="true" android:label="Project14" android:requestLegacyExternalStorage="true" android:allowNativeHeapPointerTagging="false" android:allowBackup="true" android:fullBackupOnly="false">
+        <activity android:name="org.qtproject.qt.android.bindings.QtActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:label="Project14" android:launchMode="singleTop" android:screenOrientation="landscape" android:exported="true" android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
